--- a/About Matthew Cain.html
+++ b/About Matthew Cain.html
@@ -19,10 +19,10 @@
             <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
           </li >
           <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__itemnavigation-list__item--active">About Me</a>
+            <a href="About%20Matthew%20Cain.html" role="menuitem" class="navigation-list__itemnavigation-list__item--active">About Me</a>
           </li>
           <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+            <a href="Contact%20Matthew%20Cain.html" role="menuitem" class="navigation-list__item">Contact</a>
           </li>
           <li role="presentation">
             <a href="work.html" role="menuitem" class="navigation-list__item">My "Work"</a>
