--- a/Contact Matthew Cain.html
+++ b/Contact Matthew Cain.html
@@ -18,10 +18,10 @@
             <a href="index.html" role="menuitem" class="navigation-list__item">Home</a>
           </li >
           <li role="presentation">
-            <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
+            <a href="About%20Matthew%20Cain.html" role="menuitem" class="navigation-list__item">About Me</a>
           </li>
           <li role="presentation">
-            <a href="contact.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
+            <a href="Contact%20Matthew%20Cain.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Contact</a>
           </li>
           <li role="presentation">
             <a href="work.html" role="menuitem" class="navigation-list__item">My "Work"</a>
