Updated paths and debugging
If applied, this commit will update paths and fix minor errors.

--- a/Contact Matthew Cain.html
+++ b/Contact Matthew Cain.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
     <div class="profile">
-      <img src="img\WIN_20201013_17_24_30_Pro (2).jpg" class="profile_portrait" alt="Matthew Cain portrait">
+      <img src="img/portrait.jpg" class="profile_portrait" alt="Matthew Cain portrait">
       <h1>
         <a href="mailto:cain720@gmail.com?subject=whyamiemailingyoulol&body=thisisverysilly">Contact me!</a>
       </h1>
@@ -41,7 +41,7 @@
         <a href="mailto:cain720@gmail.com?subject=whyamiemailingyoulol&body=thisisverysilly">E-mail: cain720@gmail.com</a>
       </div>
       <div>
-        <form action="" method="post" id="contact-form">
+        <form action="#" method="post" id="contact-form">
           <label for="contact-email">E-mail*: </label>
           <input type="email" id ="contact-email" required>
         <div>
@@ -62,9 +62,9 @@
         <p>Follow me here!</p>
         <!-- PLACEHOLDERS -->
         <div class="social-media">
-          <a href="#"><img src="file:///C:/Users/Maddie/Documents/MyPortfolio/img/GitHub-Mark-32px.png" alt="github logo" class="svg"></a>
-          <a href="#"><img src="file:///C:/Users/Maddie/Documents/MyPortfolio/img/twitter.png" alt="twitter logo" class="svg"></a>
-          <a href="#"><img src="file:///C:/Users/Maddie/Documents/MyPortfolio/img/linkedin.svg" alt="linkedin logo" class ="svg"></a>
+          <a href="#"><img src="img/GitHub-Mark-32px.png" alt="github logo" class="svg"></a>
+          <a href="#"><img src="img/twitter.png" alt="twitter logo" class="svg"></a>
+          <a href="#"><img src="img/linkedin.svg" alt="linkedin logo" class ="svg"></a>
         </div>
       </footer>
     </div>
