--- a/work.html
+++ b/work.html
@@ -19,10 +19,10 @@
             <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
           </li>
           <li role="presentation">
-            <a href="About%20Matthew%20Cain.html" role="menuitem" class="navigation-list__item">About Me</a>
+            <a href="About-Matthew-Cain.html" role="menuitem" class="navigation-list__item">About Me</a>
           </li>
           <li role="presentation">
-            <a href="Contact%20Matthew%20Cain.html" role="menuitem" class="navigation-list__item">Contact</a>
+            <a href="Contact-Matthew-Cain.html" role="menuitem" class="navigation-list__item">Contact</a>
           </li>
           <li role="presentation">
             <a href="work.html" role="menuitem" class="navigation-list__item">My "Work"</a>
