--- a/Contact-Matthew-Cain.html
+++ b/Contact-Matthew-Cain.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang: en>
   <head>
     <meta charset="utf-8">
     <title>Matthew Cain's Portfolio</title>
@@ -29,12 +29,12 @@
         </ul>
       </nav>
     </header>
-    <div class="profile">
+    <div class="contact-profile">
       <img src="img/portrait.jpg" class="profile_portrait" alt="Matthew Cain portrait">
       <h1>
         <a href="mailto:cain720@gmail.com?subject=whyamiemailingyoulol&body=thisisverysilly">Contact me!</a>
       </h1>
-      <div>
+      <div class="Contact">
         <a href="tel:1-(518)-879-4921">Phone: 1-(518)-879-4921</a>
       </div>
       <div>
