Send message button
If applied, this commit will update the aesthetics of the "send message" button.

--- a/Contact-Matthew-Cain.html
+++ b/Contact-Matthew-Cain.html
@@ -29,7 +29,7 @@
         </ul>
       </nav>
     </header>
-    <div class="contact-profile">
+    <div class="profile">
       <img src="img/portrait.jpg" class="profile_portrait" alt="Matthew Cain portrait">
       <h1>
         <a href="mailto:cain720@gmail.com?subject=whyamiemailingyoulol&body=thisisverysilly">Contact me!</a>
@@ -53,7 +53,7 @@
           <textarea maxlength="500" id="contact-message" required></textarea>
         </div>
         <div>
-          <input type="submit" value="Send message">
+          <input class="button" type="submit" value="Send message">
         </div>
           <p>* = Required</p>
         </form>
