"My work" link ---> button
If applied, this commit will turn the "My work" link into a button.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="favicon" href="http://wikipedia.org/static/favicon/wikipedia.ico" type="image/icon"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Slabo+13px&display=swap">
-    <link rel="stylesheet" href="css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="css/style.production.css" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
@@ -36,7 +36,7 @@
       <p>
         My name is Matthew Cain. I'm an aspiring front end web developer based in Brooklyn, New York.
       </p>
-      <a href="work.html">My work.</a>
+      <a href="work.html" class="button">My work.</a>
     </div>
     <footer class="page-footer">
       <p>Follow me here!</p>
