--- a/Contact-Matthew-Cain.html
+++ b/Contact-Matthew-Cain.html
@@ -34,25 +34,25 @@
       <h1>
         <a href="mailto:cain720@gmail.com?subject=whyamiemailingyoulol&body=thisisverysilly">Contact me!</a>
       </h1>
-      <div class="Contact">
+      <div class="contact">
         <a href="tel:1-(518)-879-4921">Phone: 1-(518)-879-4921</a>
       </div>
-      <div>
+      <div class="contact">
         <a href="mailto:cain720@gmail.com?subject=whyamiemailingyoulol&body=thisisverysilly">E-mail: cain720@gmail.com</a>
       </div>
-      <div>
+      <div class ="contact">
         <form action="#" method="post" id="contact-form">
           <label for="contact-email">E-mail*: </label>
           <input type="email" id ="contact-email" required>
-        <div>
+        <div class="contact">
           <label for="contact-telephone">Telephone: </label>
           <input type="tel" pattern="/d{3}[/-]/d{3}[/-]/d{4}" id="contact-telephone">
         </div>
-        <div>
+        <div class="contact">
           <label for="contact-message">Message*: </label>
           <textarea maxlength="500" id="contact-message" required></textarea>
         </div>
-        <div>
+        <div class="contact">
           <input class="button" type="submit" value="Send message">
         </div>
           <p>* = Required</p>
